--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -23,12 +23,36 @@ img{
 	margin:0 auto;
 }
 
-.box{
+body{
+    background-color: blue;
+    margin: 100px 50px;
+    box-sizing: border box;
+}
 
+header div h2{
+    color: aliceblue;
+    margin: 10px;
+}
+
+header div img{
+    width: 30px;
+    height: 30px;
+}
+
+.uberschrift{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+.box{
 /*  mit flex width oder grid und height hard besser nicht schreiben */
     width: 100%;
     min-height: 200px;
-    background-color: rgb(50, 131, 137);
+    background-color: rgb(239, 246, 246);
     border: 2px solid black;
 
     /* display flex + align items center + justify content center -> sorgen dafür, dass die child items, oder innere Text in der Mitte platziert werden */
@@ -36,7 +60,7 @@ img{
     align-items: center;
     justify-content: center;
 
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .main{
